--- a/style/style.css
+++ b/style/style.css
@@ -123,10 +123,10 @@ body {
 }
 
 .six .hat {
-  position: relative;
+  position: absolute;
   width: 150px;
   top: -110px;
-  left: 220%;
+  left: 400%;
   /* transform: scale(0.1); */
 }
 
